[package]
name = "assembler"
version = "0.1.0"
authors = ["Taishi Naka (@lemonadern)"]
edition = "2021"

description = "A tiny assembler for nktk-architecture processor/computer."
repository = "https://github.com/lemonadern/assembler"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
regex = "1.8.1"
clap = { version = "4.2.7", features = ["derive"] }
